# web-rwkv-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: simple.py
src/: info.rs  lib.rs  v4.rs  v5.rs  v6.rs
