[package]
edition = "2021"
name = "web-rwkv-py"
version = "0.2.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "web_rwkv_py"

[dependencies]
anyhow = "1"
derivative = "2.2.0"
half = { version = "2.2", features = ["bytemuck", "serde"] }
itertools = "0.14"
memmap2 = "0.9"
pollster = "0.3.0"
pyo3 = "0.21.2"
safetensors = "0.5"
tokio = { version = "1.37", features = ["full"] }
uid = "0.1.7"
web-rwkv-derive = "0.2.0"

[dependencies.web-rwkv]
default-features = false
features = ["native"]
# path = "../web-rwkv"
version = "0.10.8"
